# Vinat

./: .dockerignore  .gitignore  Dockerfile  compose.yaml  manage.py  pyproject.toml
apps/main/: admin.py  apps.py  models.py  tests.py  views.py
apps/main/data/: company.json
apps/main/static/css/: MainPage.css
apps/main/templates/: base.html  product.html
apps/main/views/: main.py  pp.py  product.py  ps.py  pvd.py
base/: admin.py  models.py  requrimets.txt  views.py
base/migrations/: 0001_initial.py  0002_auto_20190917_1317.py  0003_auto_20190917_1320.py
base/static/css/: MainPage.css
base/templates/: PS.html  Vinat.html  base.html  index.html
nginx/: nginx.conf
vinat/: asgi.py  settings.py  urls.py  wsgi.py
